--- a/07_ejercicio.ipynb
+++ b/07_ejercicio.ipynb
@@ -11,65 +11,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gestión de ramas."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cd demo"
+    "# Gestión de repositorios."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ramas."
+    "## Ejercicio."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "``` bash\n",
-    "> git log --oneline\n",
-    "\n",
-    "git log --oneline\n",
-    "\n",
-    "a1c53ed (HEAD -> master) cuarto commit\n",
-    "52c9f8c segundo commit\n",
-    "e71f6f8 primer commit\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git log --oneline"
+    "### Creación del directorio ```prueba``` y su contenido. \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La rama ```master```."
+    "* La siguiente celda creará al sudirectorio ```prueba``` en el directorio en el que se encuentra esta notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mkdir prueba"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Listado de ramas.\n",
-    "\n",
-    "``` bash\n",
-    "git branch --list\n",
-    "```\n"
+    "* Se posicionará el flujo de la notebook al subdirectorio ```prueba```."
    ]
   },
   {
@@ -78,47 +57,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git branch --list"
+    "cd prueba"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Creación de una rama.\n",
-    "\n",
-    "```\n",
-    "git branch <nombre>\n",
-    "```"
+    "* La siguiente celda inizializará a ```prueba```como un repsotiorio de *Git*."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "git branch nueva"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git branch --list"
+    "git init"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Cambio a una rama.\n",
-    "\n",
-    "```\n",
-    "git checkout <nombre>\n",
-    "````"
+    "* Se crearán 5 archivos con el nombre ```archivo-<n>```."
    ]
   },
   {
@@ -127,7 +91,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git checkout nueva"
+    "for i in {1..5}\n",
+    "do\n",
+    "    touch archivo-$i\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Se creará el archivo ```otro_archivo```."
    ]
   },
   {
@@ -136,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls -a"
+    "touch otro_archivo"
    ]
   },
   {
@@ -145,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat archivo-1"
+    "ls -l"
    ]
   },
   {
@@ -154,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "echo \"Hola, mundo.\" >> archivo-1"
+    "git status"
    ]
   },
   {
@@ -163,7 +137,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "echo \"Archivo de la rama nueva.\" > archivo_nuevo"
+    "git ls-files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git add archivo-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git ls-files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git add archivo-*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git ls-files"
    ]
   },
   {
@@ -181,7 +209,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git commit -m \"primer commit de la rama nueva\""
+    "git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git commit -m \"commit inicial\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "echo Hola >> archivo-5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat archivo-5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git rm --cached otro_archivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git commit -m \"segundo commit\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git log"
    ]
   },
   {
@@ -196,10 +332,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "ls -a"
+    "git log archivo-5"
    ]
   },
   {
@@ -208,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git checkout master"
+    "echo \"Hola, amigos.\" >> archivo-5"
    ]
   },
   {
@@ -217,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git log --oneline"
+    "cat archivo-5"
    ]
   },
   {
@@ -226,43 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git checkout c4c7d69"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git log --oneline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git checkout otra-rama"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git branch --list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "echo \"Otro hola\" > archivo-1"
+    "git status"
    ]
   },
   {
@@ -280,7 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git commit -m \"commit rama otra-rama\""
+    "git commit -m \"tercer commit\""
    ]
   },
   {
@@ -289,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git log archivo-1"
+    "git log archivo-5"
    ]
   },
   {
@@ -298,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git diff master otra-rama archivo-1"
+    "mv archivo-2 nuevo-archivo"
    ]
   },
   {
@@ -307,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git merge --abort"
+    "rm archivo-1"
    ]
   },
   {
@@ -316,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git rebase master"
+    "git add --all"
    ]
   },
   {
@@ -325,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git rebase --abort"
+    "git status"
    ]
   },
   {
@@ -334,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git rm archivo-1"
+    "git commit -m \"cuarto commit\""
    ]
   },
   {
@@ -343,7 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git commit -m \"archivo conflictivo eliminado\""
+    "git log"
    ]
   },
   {
@@ -352,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git branch --list"
+    "git diff ff25ec9 d0da8df"
    ]
   },
   {
@@ -361,7 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git merge alterna"
+    "cp ../img/pythonista.png ."
    ]
   },
   {
@@ -370,7 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git checkout master"
+    "git add --all"
    ]
   },
   {
@@ -379,7 +481,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git log archivo-1"
+    "git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git commit -m \"quinto commit añadiendo un archivo binario\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git diff d867d69 73382d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git diff 73382d d867d69 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git diff pythonista.png"
    ]
   },
   {
