--- a/04_gestion_de_ramas.ipynb
+++ b/04_gestion_de_ramas.ipynb
@@ -226,24 +226,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git checkout c4c7d69"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git log --oneline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "git checkout otra-rama"
    ]
   },
@@ -253,16 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git branch --list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "echo \"Otro hola\" > archivo-1"
+    "echo \"Otro hola\" >> archivo-1"
    ]
   },
   {
@@ -280,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git commit -m \"commit rama otra-rama\""
+    "git commit -m \"primer commit en otra-rama\""
    ]
   },
   {
@@ -326,60 +299,6 @@
    "outputs": [],
    "source": [
     "git rebase --abort"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git rm archivo-1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git commit -m \"archivo conflictivo eliminado\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git branch --list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git merge alterna"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git checkout master"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git log archivo-1"
    ]
   },
   {
