--- a/05_gitflow.ipynb
+++ b/05_gitflow.ipynb
@@ -15,152 +15,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Listado de ramas.\n",
-    "\n",
-    "``` bash\n",
-    "git branch --list\n",
-    "```\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fatal: Path 'master' does not exist in 'origin'\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "128",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
-    "git branch --list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###  Creación de una rama.\n",
-    "\n",
-    "```\n",
-    "git branch <nombre>\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git branch temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git branch --list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###  Cambio a una rama.\n",
-    "\n",
-    "```\n",
-    "git checkout <nombre>\n",
-    "````"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git checkout temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git add --all"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git commit -m \"temp\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Para enviar los archivos a la nueva rama, solo se requiere  indicarlo.\n",
-    "En una terminal agregar:\n",
-    "\n",
-    "```\n",
-    "git push origin temp\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mezcla de ramas.\n",
-    "\n",
-    "Para mezclar loa archivos de una rama se utiliza:\n",
-    "\n",
-    "```\n",
-    "git merge <nombre de otra rama>\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git checkout master"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git merge temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git stash"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Para practicar:\n",
-    "\n",
-    "Github ha puesto un pequeño tutorial interactivo en:\n",
-    "https://try.github.io/levels/1/challenges/1"
+    "git diff master origin:master"
    ]
   },
   {
