--- a/03_gestion_de_repositorios.ipynb
+++ b/03_gestion_de_repositorios.ipynb
@@ -1618,15 +1618,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparación archivos entre commits.\n",
+    "## Comparación entre archivos de distintos commits.\n",
     "\n",
-    "El comando ```git diff```permite realizar comparaciones entre:\n",
+    "El comando ```git diff```permite entre otras cosas visualizar las diferencias de uno o varios archivos entre un commit y otro.\n",
     "\n",
-    "* Commits.\n",
-    "* Archivos.\n",
-    "* Ramas (se estudiará posteriormente).\n",
-    "\n",
-    "documentación de referencia de ```git diff```está disponible en:\n",
+    "La documentación de referencia de ```git diff```está disponible en:\n",
     "\n",
     "https://git-scm.com/docs/git-diff"
    ]
@@ -1639,12 +1635,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* la siguiente celda añadirá una línea de texto al archivo ```archivo-1```."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "echo Hola > archivo-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "* La siguiente celda hará un commit "
    ]
   },
   {
