--- a/04_gestion_de_ramas.ipynb
+++ b/04_gestion_de_ramas.ipynb
@@ -11,12 +11,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gestión de ramas."
+    "# Gestión de ramas.\n",
+    "\n",
+    "Otra de las característcas promordiales de los sistemas de gestión de versiones es su capacidad de poder separar flujos de trabajo en \"ramas\", la cuales pueden bifurcarse de una rama principal e incluso podrían converger en otro momento.\n",
+    "\n",
+    "La combinación de commit y ramas permiten crear flujos de trabajo colaborativos muy eficientes en el desarrolo de un proyecto de software."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notas preliminares.\n",
+    "\n",
+    "* Para poder ejecutar el código de este capítulo es necesario haber ejecutado el código de los capítulos previos.\n",
+    "\n",
+    "* Es necesario que la notebook se ejecute desde el directorio ```demo```, ejecutando la siguiente celda."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,10 +39,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ref: refs/heads/master\n"
+     ]
+    }
+   ],
    "source": [
-    "## Ramas."
+    "cat .git/HEAD"
    ]
   },
   {
@@ -47,9 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "971e1d8 (HEAD -> master) segundo commit\n",
+      "3c76e61 primer commit\n"
+     ]
+    }
+   ],
    "source": [
     "git log --oneline"
    ]
